# robot_llm_project

./: .gitmodules  rosinstall.noetic
llm_common/: CMakeLists.txt  package.xml  setup.py
llm_common/node_scripts/: obstacle_pointcloud_publisher.py  task2b_object_publiher.py
llm_common/scripts/: now-hand-coords  now-pose  print-coords
llm_common/src/llm_common/: agent.py  prompts.py  utils.py
llm_common/src/llm_common/backup/: coord_utils.py  move_utils.py  pose_utils.py  smach_utils.py  subscriber.py  tmc_speak.py
llm_common/src/llm_common/backup/actions/: goto.py  pick.py
llm_common/src/llm_common/backup/models/: box.py  polygon.py
llm_common/src/llm_common/backup/subscribers/: __init__.py  bounding_box_array_subscriber.py  boxes_with_info.py  classification_result_subscriber.py  image_subscriber.py  placement_finder.py  polygon_array_subscriber.py  pose_array_subscriber.py  rect_with_feature_array_subscriber.py  speech_recognition_subscriber.py  wrench_subscriber.py
llm_common/src/llm_common/prompt/: prompts.py
llm_common/src/llm_common/test/: openai_video.py
llm_common_msgs/: CMakeLists.txt  package.xml
llm_common_msgs/msg/: ClipResultStamped.msg  GenerationOutput.msg  Int64MultiArrayStamped.msg  Query.msg  Task.msg  TaskSequence.msg
llm_common_msgs/srv/: PerceptionReconfigure.srv  PrimitiveQuery.srv  Query.srv  SamPrompt.srv
llm_project/: CMakeLists.txt  package.xml
llm_ros/: CMakeLists.txt  package.xml  requirements.txt  setup.py
llm_ros/cfg/: CLIP.cfg  HandDetection.cfg
llm_ros/config/: clip.rviz  pr2.rviz  pr2_tabletop.rviz
llm_ros/euslisp/: hand-motion.l  pr2-motion.l  primitive-motion-node.l  test.l
llm_ros/launch/: agent.launch  clip_inference.launch  data_recorder.launch  hand_interaction_detector.launch  imagebind_inference.launch  llm_agent.launch  perception.launch  robot_primitive.launch  tabletop_perception.launch
llm_ros/node_scripts/: agent_node.py  clip_inference_node.py  hand_joy_node.py  imagebind_inference_node.py  openai_node.py  perception_node.py  perception_reconfigure_node.py  probs_node.py  repub_filter_data_node.py  rviz_node.py  scene_analyzer_node.py  subprocess_test_node.py
llm_ros/src/llm_ros/: prompts.py  test.py
llm_ros/test/: test.py  test_node.py
vlm_ros/: run_docker
vlm_ros/cfg/: VLM.cfg
vlm_ros/launch/: sample_vqa.launch
vlm_ros/node_scripts/: vqa_node.py
vlm_ros/scripts/: honeybee_server.py  llava_server.py
