<?xml version="1.0"?>
<package format="3">
  <name>llm_common</name>
  <version>0.0.1</version>
  <description>The common package for llm</description>
  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>llm_common_msgs</exec_depend>
</package>
