<?xml version="1.0"?>
<package format="3">
  <name>llm_ros</name>
  <version>0.0.1</version>
  <description>Large Language Model ROS package</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>catkin_virtualenv</build_depend> -->
  <build_depend>llm_common</build_depend>
  <build_depend>llm_common_msgs</build_depend>

  <exec_depend>jsk_topic_tools</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>llm_common</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>llm_common_msgs</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
